infra/k8s/expiration-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - image: mistykraken/expiration
          name: expiration
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          imagePullPolicy: Never
      restartPolicy: Always
