infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - image: d4rthvadr/t-acme-auth
          name: auth
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3001
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: 3001
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3001
              name: auth-port
          imagePullPolicy: Always
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
