infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: mistykraken/client
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort: 3000
          name: client-port
        imagePullPolicy: Never
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
  - name: client-fe
    port: 3000
    targetPort: 3000
