infra/k8s/orders-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - image: d4rthvadr/t-acme-orders
          name: orders
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3003
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: 3003
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3003
              name: orders-port
          imagePullPolicy: Always
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
