infra/k8s/payments-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - image: mistykraken/payments
          name: payments
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3004
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: 3004
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3004
              name: payments-port
          imagePullPolicy: Never
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
