infra/k8s/payments-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - image: mongo
          name: payments-mongo
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: payments-mongo-srv
spec:
  selector:
    app: payments-mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      protocol: TCP
