infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - image: mistykraken/tickets
          name: tickets
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3002
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: 3002
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3002
              name: tickets-port
          imagePullPolicy: Never
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
